--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ ARID_v1_5_211015/
 ARID.pdf
 Nightcrawler.pdf
 TAL-AI.pdf
+
+Test.mp4
+vid.mp4
+
+datasets
+.vs
+.vscode
+.venv
+.gitignore
+
+web_interface/venv/
+web_interface/API/static/faces/**
+
+web_interface/API/static/predicted/**
+web_interface/API/static/uploads/**
+
